src/public/stylesheet.scss
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes rotate {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

:root {
  --margin: 0;
  --width: 414px;
}

@media (max-width: 414px) {
  :root {
    --margin: 16px;
    --width: 100%;
  }
}

* {
  box-sizing: border-box;
}

.hidden {
  opacity: 0;
}

.visible {
  opacity: 1;
}

html {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: "Inter", sans-serif;
  min-height: 100%;
  width: 100vw;
}

body {
  color: #343a40;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0;
  max-height: 684px;
  padding: 24px 0;
  width: var(--width);
}

h1 {
  font-size: 16px;
  font-weight: 700;
  margin: 0;
}

header {
  display: flex;
  font-family: "HK Grotesk", sans-serif;
  align-items: center;
  justify-content: space-between;
  margin: 0 var(--margin);
  padding: 0 0 24px;
}

header .title {
  display: flex;
  align-items: center;
}

header .logo {
  border-radius: 50%;
  height: 32px;
  width: 32px;
}

header .title .logo {
  margin-right: 12px;
}

header ul {
  display: flex;
  align-items: center;
  list-style: none;
  margin: 0;
}

header li {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  font-weight: 700;
  margin-left: 24px;
}

header li .live {
  animation: fadeIn 1s infinite alternate;
  background: red;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  margin-right: 5px;
}

main {
  display: flex;
  justify-content: flex-start;
  flex: 1;
  flex-direction: column;
}

/* Metadata */

.metadata__cover {
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  opacity: 0;
  transition: opacity 150ms ease-in-out;
  width: 100%;
}

.metadata__cover.visible {
  opacity: 1;
}

.metadata__text {
  margin: 18px var(--margin) 0;
}

.metadata__title {
  font-size: 24px;
  font-weight: 600;
  margin: 0;
  overflow: hidden;
  white-space: nowrap;
}

.metadata__artist {
  font-size: 20px;
  font-weight: 400;
  margin: 4px 0 0;
}

/* ProgressBar */

.progressBar {
  display: flex;
  align-items: center;
  height: 16px;
  position: relative;
}

.progressBar::after {
  content: "";
  position: absolute;
  top: 7px;
  right: 0;
  left: 0;
  background: #f0f0f0;
  border-radius: 2px;
  height: 2px;
  z-index: -1;
}

.progressBar__fill {
  background: #cfcfcf;
  border-radius: 2px;
  height: 4px;
  position: relative;
  transition: background 100ms ease-in-out;
}

.progressBar__fill.active {
  background: #0071eb;
}

.progressBar:hover .progressBar__fill.draggable::after,
.progressBar__fill.draggable.dragging::after {
  background: #0071eb;
  border-radius: 50%;
  content: "";
  position: absolute;
  right: -4px;
  top: -2px;
  width: 8px;
  height: 8px;
}

/* RadioProgress */

.radioProgress {
  margin: 18px var(--margin);
}

.radioProgress__time {
  color: #585858;
  display: flex;
  font-size: 12px;
  justify-content: space-between;
  margin-top: 10px;
}

/* Controls */

.controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 var(--margin);
}

.controls svg {
  width: 20px;
  height: 20px;
}

/* ListenButton */

.listenButton {
  background: #0071eb;
  border: none;
  border-radius: 4px;
  color: white;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex: 0;
  font-family: "HK Grotesk", sans-serif;
  font-size: 12px;
  font-weight: 700;
  height: 32px;
  padding: 8px 12px 8px 8px;
  width: fit-content;
}

.listenButton svg {
  width: 16px;
  height: 16px;
  margin-right: 6px;
}

.listenButton svg.loading {
  animation: rotate 1s linear infinite;
}

/* VolumeControl */

.volumeControl {
  display: flex;
  justify-content: center;
  align-items: center;
}

.volumeControl button {
  justify-content: flex-start;
}

.volumeControl__icon {
  background: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  margin-right: 2px;
  width: 32px;
  height: 22px;
}

.volumeControl .progressBar {
  cursor: pointer;
}

